--- a/PileditServer/PileditServer.csproj
+++ b/PileditServer/PileditServer.csproj
@@ -9,6 +9,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PileditBackend\PileditBackend.csproj" />
   </ItemGroup>
 
