--- a/PileditBackend/Properties/launchSettings.json
+++ b/PileditBackend/Properties/launchSettings.json
@@ -2,7 +2,8 @@
   "profiles": {
     "PileditBackend": {
       "commandName": "Project",
-      "commandLineArgs": "--debug"
+      "commandLineArgs": "--debug",
+      "nativeDebugging": true
     }
   }
 }
